@@ -1,3 +1,8 @@
+2008-03-15  Brian Gough  <bjg@network-theory.co.uk>
+
+	* bessel.c (gsl_sf_bessel_Jnu_asympx_e): use full asymptotic
+	series
+
 2008-03-14  Brian Gough  <bjg@network-theory.co.uk>
 
 	* bessel_j.c (gsl_sf_bessel_jl_e): increase error estimate by
